terraform/ecc-aws-169-security_group_ingress_is_restricted_traffic_to_port_4333/red/sg.tf
resource "aws_vpc" "this" {
  cidr_block = "10.0.0.0/16"
}
resource "aws_security_group" "this" {
  name   = "169_security_group_red"
  vpc_id = aws_vpc.this.id

  ingress {
    from_port   = 4333
    to_port     = 4333
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
